# little_ledger

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: main.rs
src/io/: input.rs  mod.rs  output.rs  test.rs
src/model/: account.rs  balance.rs  common.rs  ledger.rs  mod.rs  test.rs  transaction.rs
tests/: input.csv  integration.rs
